# mowen-agent

./: .dockerignore  .gitignore  Dockerfile.app  Dockerfile.sandbox  README.md  api.py  ask.py  build_vectorstore.py  docker-compose.yml  pyproject.toml  requirements.txt
.playwright-mcp/: page-2026-07-08T11-21-40-791Z.yml  page-2026-07-08T11-22-14-495Z.yml  page-2026-07-08T11-26-29-321Z.yml  page-2026-07-08T11-32-22-144Z.yml
app/: __init__.py  cleanup.py  errors.py  main.py  models.py
app/routes/: chat.py  config.py  conversations.py  files.py  knowledge_bases.py  memory.py  scheduled_tasks.py  settings.py
data/: 【南锦】洛烟小姐的脚下埋着尸体⊙103.7万字（完本）.txt
deploy/: build-and-deploy.sh  nginx.conf  server-init.sh  start.sh
docs/: todo-docker-deploy.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: chat.ts  config.ts  configApi.ts  conversations.ts  index.ts  knowledgeBaseApi.ts  scheduledTaskApi.ts  settingsApi.ts
frontend/src/assets/: main.css
frontend/src/components/chat/: ChatArea.vue  ChatInput.vue  ChatMessage.vue  ContextPanel.vue
frontend/src/components/home/: HomeHero.vue
frontend/src/components/layout/: AppHistory.vue  AppSidebar.vue  ChatHistoryPanel.vue  KnowledgeBasePanel.vue
frontend/src/components/settings/: AgentSettings.vue  EmbeddingSettings.vue  McpSettings.vue  MemorySettings.vue  ModelSettings.vue  PersonaSettings.vue  ProfileSettings.vue  RetrievalSettings.vue
frontend/src/composables/: useChat.ts  useConfig.ts  useKnowledgeBase.ts  useSettings.ts
frontend/src/router/: index.ts
frontend/src/stores/: chat.ts  knowledgeBase.ts
frontend/src/types/: api.ts
frontend/src/utils/: markdown.ts  retry.ts
frontend/src/views/: HomeView.vue  ScheduledTasksView.vue  SettingsView.vue
notebook/: agent_demo.ipynb  agent_rag_demo.ipynb  chat_demo.ipynb  fastapi_demo.ipynb  rag_demo.ipynb
rag/: __init__.py  chain.py  chat_chain.py  config.py  embeddings.py  knowledge_base.py  llm.py  loader.py  pipeline.py  query_expansion.py  retriever.py  splitter.py  vectorstore.py  vectorstore_chroma.py
server/: __init__.py  chain.py  chat_chain.py  config.py  conversation_store.py  db.py  embeddings.py  knowledge_base.py  llm.py  logging_config.py  model_context.py  provider_config.py  splitter.py  user_settings.py  vectorstore_chroma.py
server/agent/: __init__.py  checkpointer.py  graph.py  mcp.py  memory.py  sandbox.py  skills.py  tools.py
server/core/: config.py  conversation_store.py  db.py  logging_config.py  scheduled_task_store.py  scheduler.py  user_settings.py
server/legacy/: __init__.py  chain.py  pipeline.py
server/llm/: embeddings.py  factory.py  model_context.py  provider_config.py
server/prompts/: __init__.py  agent.py  query_expansion.py  rag.py
server/rag/: chain.py  cleaner.py  knowledge_base.py  loader.py  splitter.py  vectorstore.py
server/retrieval/: __init__.py  query_expansion.py  retriever.py
skills/: data_analysis.md  document-conversion.md  web_scraping.md
skills/find_skills/: index.md
tests/: conftest.py  test_config.py  test_embeddings.py  test_errors.py  test_files.py  test_knowledge_base.py  test_loader.py  test_model_context.py  test_prompts.py  test_splitter.py  test_user_settings.py
