[project]
name = "mowen-ai-assistant"
version = "0.3.0"
description = "墨问 - 通用 AI 助手，支持多轮对话与可选 RAG 知识库增强"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "notebook>=7.0",
    "ipykernel>=6.0",
    "langchain>=1.3,<2.0",
    "langchain-core>=1.4,<2.0",
    "langchain-community>=0.3,<0.4",
    "langchain-classic>=1.0.0a1",
    "langchain-text-splitters>=1.0,<2.0",
    "faiss-cpu>=1.8",
    "langchain-chroma>=0.1",
    "chromadb>=0.5",
    "zhipuai>=2.1",
    "httpx>=0.27",
    "httpx-sse>=0.4",
    "pyjwt==2.8.0",
    "cachetools>=5.0",
    "fastapi>=0.139.0",
    "uvicorn>=0.49.0",
    "langchain-deepseek>=1.1.0",
]

