[project]
name = "mowen-ai-assistant"
version = "0.3.0"
description = "墨问 - 通用 AI 助手，支持多轮对话与可选 RAG 知识库增强"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "notebook==7.6.0",
    "ipykernel==7.3.0",
    "langchain==1.3.11",
    "langchain-core==1.4.8",
    "langchain-community==0.3.31",
    "langchain-classic==1.0.8",
    "langchain-text-splitters==1.1.2",
    "langchain-chroma==1.1.0",
    "chromadb==1.5.9",
    "pypdf==6.14.2",
    "pymupdf==1.26.6",
    "python-docx==1.2.0",
    "lxml==6.1.1",
    "httpx==0.28.1",
    "fastapi==0.139.0",
    "uvicorn==0.49.0",
    "langchain-deepseek==1.1.0",
    "langgraph==1.2.7",
    "tavily-python==0.7.26",
    "python-multipart==0.0.32",
    "docker==7.1.0",
    "langchain-mcp-adapters==0.3.0",
    "mcp==1.28.1",
    "langchain-openai==1.3.3",
    "apscheduler==3.11.3",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

